# src/routes/AuthRoutes.js
@@ -1,10 +1,9 @@
+const express = require("express");
+const AuthController = require("../controllers/AuthController");
 
-const express = require('express')
-const AuthController = require('../controllers/AuthController')
+const routes = express.Router();
 
-const routes = express.Router()
+routes.post("/auth/login", AuthController.login);
+routes.post("/auth/create", AuthController.create);
 
-routes.post('/auth/login', AuthController.login)
-routes.post('/auth/create', AuthController.create)
-
-module.exports = routes
+module.exports = routes;
